force-app/main/default/objects/Email_Priority_Queue_Mapping__mdt/Email_Priority_Queue_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>this config will store mapping of normal queue to priority queue for priority domain customers</description>
    <label>Email Priority Queue Mapping</label>
    <pluralLabel>Email Priority Queue Mapping</pluralLabel>
</CustomObject>