force-app/main/default/objects/Email_Priority_Queue_Mapping__mdt/fields/From_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Queue_Name__c</fullName>
    <label>From Queue Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>