force-app/main/default/objects/Email_Priority_Queue_Mapping__mdt/fields/To_Priority_Queue__c.field-meta.xml
<CustomField>
    <fullName>To_Priority_Queue__c</fullName>
    <label>To Priority Queue</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>